# spotify-discovery-scrapper

./: README.md  REQUIREMENTS.md  app.py  generate_heatmap.py  heatmap_template.html  pyproject.toml  requirements.txt
.streamlit/: config.toml
config/: sources.yaml
docs/: ARCHITECTURE.md
mvp/: DEPLOY.md  app.py  run_mvp.bat
reports/: diagnosis.json  heatmap_dashboard.html  prototype_dashboard.html
src/scrapper/: __init__.py  cli.py  config.py  models.py  registry.py
src/scrapper/analysis/: __init__.py  diagnostics.py
src/scrapper/collectors/: __init__.py  app_store.py  base.py  play_store.py  reddit.py
src/scrapper/pipeline/: __init__.py  cluster.py  consolidate.py  embed.py  label.py
src/scrapper/storage/: __init__.py  io.py
tests/: test_smoke.py
