[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapper"
version = "0.0.0"
description = "Multi-source review-analysis pipeline diagnosing Spotify music discovery"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Ashu" }]
dependencies = [
    "httpx>=0.27",
    "tenacity>=8.2",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "typer>=0.12",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "python-dotenv>=1.0",
    "praw>=7.7",
    "google-play-scraper>=1.2",
]

[project.optional-dependencies]
ml = [
    "sentence-transformers>=2.7",
    "scikit-learn>=1.4",
    "hdbscan>=0.8.33",
    "umap-learn>=0.5",
    "numpy>=1.26",
]
llm = [
    "anthropic>=0.25",
    "openai>=1.30",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
scrapper = "scrapper.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
